try fix zooming on mobile

--- a/style.scss
+++ b/style.scss
@@ -65,7 +65,8 @@ body{
     border: 1px solid #76bc21;
     padding: 10px 15px;
     outline: #76bc21;
-    width: 100%
+    width: 100%;
+    font-size: 16px;
   }
   &__add,
   &__action_delete,
